--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>ShowPage - An Easy to Use Free Responsive Landing Page</title>
   <meta name="description" content="This template is an easy to use app landing page, responsive and pretty easy to customize including some great easing effects, modal window, a sticky header with share buttons & others stuff !" />
-  <meta name="keywords" content="Free, template, easy to use, customise, one page, template, simple, minimal, landing page, app page, supview" />
+  <meta name="keywords" content="Expensive, template, easy to use, customise, one page, template, simple, minimal, landing page, app page, supview" />
   <meta name="author" content="Supview - François Martin">
 
   <!-- Favicon /-->
